--- a/src/article.html
+++ b/src/article.html
@@ -7,8 +7,10 @@
     <title>My Blog</title>
     <!-- 最新版本的 Bootstrap 核心 CSS 文件 -->
     <link rel="stylesheet" href="static/css/bootstrap.min.css" />
+    <!-- build:css css/common.min.css -->
     <link rel="stylesheet" href="css/reset.css"/>
     <link rel="stylesheet" href="css/custom.css"/>
+    <!-- endbuild -->
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     <!--[if lt IE 9]>
