--- a/src/index.html
+++ b/src/index.html
@@ -5,8 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
     <title>My Blog</title>
+    <!-- build:css css/common.min.css -->
     <link rel="stylesheet" href="css/reset.css"/>
     <link rel="stylesheet" href="css/custom.css"/>
+    <!-- endbuild -->
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="static/js/jquery-1.11.3.js"></script>
 </head>
