--- a/src/1.html
+++ b/src/1.html
@@ -16,9 +16,9 @@
 
 
 <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-<script src="static/js/jquery-1.11.3.js"></script>
+<script src="static/js/jquery.js"></script>
 <!-- 最新的 Bootstrap 核心 JavaScript 文件 -->
-<script src="static/js/bootstrap.min.js"></script>
+<script src="static/js/bootstrap.js"></script>
 <script>
     $(function(){
        // checkStandard();
