--- a/src/admin.html
+++ b/src/admin.html
@@ -38,10 +38,10 @@
             <ul class="dropdown-menu dropdown-menu-right" aria-labelledby="dLabel">
                 <li class="dropdown-header">Signed in as ijisen</li>
                 <li role="separator" class="divider"></li>
-                <li><a href="#">发布文章</a></li>
+                <li><a href="post.html">发布文章</a></li>
                 <li><a href="#">后台管理</a></li>
                 <li role="separator" class="divider"></li>
-                <li><a href="#">退出</a></li>
+                <li><a href="admin.html">退出</a></li>
             </ul>
         </div>
         <div class="navbar-collapse collapse" role="navigation">
@@ -97,11 +97,13 @@
 </div>
 
 <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-<script src="static/js/jquery-1.11.3.js"></script>
+<script src="static/js/jquery.js"></script>
 <!-- 最新的 Bootstrap 核心 JavaScript 文件 -->
-<script src="static/js/bootstrap.min.js"></script>
+<script src="static/js/bootstrap.js"></script>
+<!-- build:js js/admin.min.js -->
 <script src="js/common.js"></script>
 <script src="js/admin.js"></script>
+<!-- endbuild -->
 <script>
     $(function(){
         //checkStandard();
