--- a/src/articles.html
+++ b/src/articles.html
@@ -5,7 +5,6 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
     <title>My Blog</title>
-    <!-- 最新版本的 Bootstrap 核心 CSS 文件 -->
     <link rel="stylesheet" href="static/css/bootstrap.min.css" />
     <!-- build:css css/common.min.css -->
     <link rel="stylesheet" href="css/reset.css"/>
@@ -13,10 +12,11 @@
     <!-- endbuild -->
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-    <!--[if lt IE 9]>
+
+
     <script src="static/js/html5shiv.min.js"></script>
     <script src="static/js/respond.min.js"></script>
-    <![endif]-->
+
 </head>
 <body>
 <header class="navbar navbar-default navbar-fixed-top" id="header">
@@ -38,10 +38,10 @@
             <ul class="dropdown-menu dropdown-menu-right" aria-labelledby="dLabel">
                 <li class="dropdown-header">Signed in as ijisen</li>
                 <li role="separator" class="divider"></li>
-                <li><a href="#">发布文章</a></li>
+                <li><a href="post.html">发布文章</a></li>
                 <li><a href="#">后台管理</a></li>
                 <li role="separator" class="divider"></li>
-                <li><a href="#">退出</a></li>
+                <li><a href="admin.html">退出</a></li>
             </ul>
         </div>
         <div class="navbar-collapse collapse" role="navigation">
@@ -228,11 +228,15 @@
     <p>Copyright © 2008-2019 -吉森--My Space, My life!</p>
 </div>
 
-<!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-<script src="static/js/jquery-1.11.3.js"></script>
-<!-- 最新的 Bootstrap 核心 JavaScript 文件 -->
-<script src="static/js/bootstrap.min.js"></script>
+
+<script src="js/bootstrap.js"></script>
+<script src="js/jquery.js"></script>
+
+<!-- build:js js/articles.min.js -->
+
 <script src="js/common.js"></script>
+<script src="js/articles.js"></script>
+<!-- endbuild -->
 <script>
     $(function(){
        //checkStandard();
@@ -245,7 +249,6 @@
             document.body.appendChild(s)
         }
     });
-  returnTop();
 </script>
 </body>
 </html>
