--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="css/custom.css"/>
     <!-- endbuild -->
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-    <script src="static/js/jquery-1.11.3.js"></script>
+    <script src="static/js/jquery.js"></script>
 </head>
 <body id="index">
 <div class="page1">
