--- a/src/post.html
+++ b/src/post.html
@@ -7,14 +7,18 @@
     <title>My Blog</title>
     <!-- 最新版本的 Bootstrap 核心 CSS 文件 -->
     <link rel="stylesheet" href="static/css/bootstrap.min.css" />
+    <!-- build:css css/commom.min.css-->
     <link rel="stylesheet" href="css/reset.css"/>
     <link rel="stylesheet" href="css/custom.css"/>
+    <!-- endbuild -->
+    <script src="static/js/jquery.js"></script>
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     <!--[if lt IE 9]>
     <script src="static/js/html5shiv.min.js"></script>
     <script src="static/js/respond.min.js"></script>
     <![endif]-->
+    <script src="static/js/bootstrap.js"></script>
 </head>
 <body>
 <header class="navbar navbar-default navbar-fixed-top" id="header">
@@ -36,15 +40,15 @@
             <ul class="dropdown-menu dropdown-menu-right" aria-labelledby="dLabel">
                 <li class="dropdown-header">Signed in as ijisen</li>
                 <li role="separator" class="divider"></li>
-                <li><a href="#">发布文章</a></li>
+                <li><a href="post.html">发布文章</a></li>
                 <li><a href="#">后台管理</a></li>
                 <li role="separator" class="divider"></li>
-                <li><a href="#">退出</a></li>
+                <li><a href="admin.html">退出</a></li>
             </ul>
         </div>
         <div class="navbar-collapse collapse" role="navigation">
             <ul class="nav navbar-nav">
-                <li><a href="index.html" title="">首页</a></li>
+                <li><a  href="index.html" title="">首页</a></li>
                 <li><a href="articles.html" title="">文章</a></li>
                 <li><a href="#" title="">留言</a></li>
                 <li><a href="#" title="">聊天室</a></li>
@@ -127,11 +131,6 @@
 <div class="container-fluid footer mtl">
     <p>Copyright © 2008-2019 -吉森--My Space, My life!</p>
 </div>
-
-<!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-<script src="static/js/jquery-1.11.3.js"></script>
-<!-- 最新的 Bootstrap 核心 JavaScript 文件 -->
-<script src="static/js/bootstrap.min.js"></script>
 <script>
     $(function(){
        //checkStandard();
